--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -21,7 +21,9 @@
   <p style="color: orange; font-style: italic">
     {{ .Site.Lastmod | time.Format "02-01-2006" }}
   </p>
+  {{ if .GitInfo }}
   <div style="display: none">{{ .GitInfo.AbbreviatedHash }}</div>
+  {{ end }}
 </left>
 <left>
   <br />
